# automatic-ripping-machine

./: .envrc  .gitignore  .gitmodules  docker.nix  flake.nix  pyproject.toml  requirements.txt
arm/: runui.py
arm/config/: config.py
arm/models/: job.py
arm/ripper/: ARMInfo.py  ProcessHandler.py  arm_ripper.py  identify.py  logger.py  main.py  makemkv.py  utils.py
arm/ui/: __init__.py  comments.json  json_api.py  utils.py
arm/ui/settings/: settings.py
arm/ui/settings/templates/settings/: ripper.html
arm_wiki/: Alternate-Install-Ubuntu.md
nixos/: flake.nix  module.nix  package.nix
scripts/docker/: docker_arm_wrapper.sh  start_arm_container.sh
scripts/docker/runit/: arm_user_files_setup.sh
setup/: arm.yaml
